Ensure visibility of focused Skip Link in grid

--- a/packages/css/src/components/page/page.scss
+++ b/packages/css/src/components/page/page.scss
@@ -13,7 +13,7 @@
 
 .ams-page--application {
   display: grid;
-  grid-auto-rows: auto auto 1fr auto;
+  grid-auto-rows: min-content auto 1fr auto;
   grid-template-areas: "skip-link skip-link" "menu header" "menu body" "menu footer";
   grid-template-columns: auto 1fr;
   max-inline-size: var(--ams-page-application-max-inline-size);
